--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -4,3 +4,7 @@ spring.datasource.username=root
 spring.datasource.password=TC20ro84@sql
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+
+#JWT
+jwt.secret = secret
+jwt.expiration = 10000
